<resources>
    <string name="app_name">Multi Module Calorie Tracker</string>
    <string name="welcome_text">Welcome to the app. Pls follow the prompts below…</string>
    <string name="next">Next</string>
    <string name="select_gender">What is your gender?</string>
    <string name="activity_level">What is your activity level?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="error_weight_cant_be_empty">Please fill in int value for weight…</string>
    <string name="error_age_cant_be_empty">Please fill in int value for age…</string>
    <string name="error_height_cant_be_empty">Please fill in a value for height…</string>
    <string name="input_age">What is your age pls…</string>
    <string name="years">Years</string>
    <string name="height_unit">cm</string>
    <string name="weight_unit">kg</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="input_height">What is your height pls…</string>
    <string name="input_weight">What is your weight pls…</string>
    <string name="input_nutrient_goal">What is your nutrient goal pls…</string>

    <string name="loose_keep_or_gain_weight">Do you wish to loose, keep or gain weight ?</string>
    <string name="loose_weight">Loose</string>
    <string name="keep_weight">Keep</string>
    <string name="gain_weight">Gain</string>
    <string name="percent_carbs">%</string>
    <string name="percent_protein">%</string>
    <string name="percent_fat">%</string>

    <string name="error_invalid_value_entered">Please ensure that you are entering the correct value or the field is not empty</string>
    <string name="error_nutrient_sum">Please ensure that the sum of all nutrients is 100%</string>
    <string name="error_something_went_wrong">oops something went wrong...</string>


    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>

    <string name="gram_unit">g</string>
    <string name="kcal">kcal</string>
    <string name="your_goal">Your Goal</string>

    <string name="carbs">Carbs</string>
    <string name="protein">Protein</string>
    <string name="fat">Fat</string>

    <string name="previous_day">Previous Day</string>
    <string name="next_day">Next Day</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="tomorrow">Tomorrow</string>

    <string name="add_meal">Add %s</string>
    <string name="collapse">Collapse</string>
    <string name="expand">Expand</string>
    <string name="delete">Delete</string>
    <string name="search">Searching...</string>

    <string name="nutrient_info">%dg • %dkcal</string>
    <string name="kcal_per_100g">%dkcal / 100g</string>
    <string name="track">Track</string>
    <string name="no_results">No results</string>

</resources>
